// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HierarchyList Stateful list with nested searching 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": 400,
          "width": 400,
        }
      }
    >
      <div
        className="iot--list iot--list__full-height"
      >
        <div
          className="iot--list-header-container"
        >
          <div
            className="iot--list-header"
          >
            <div
              className="iot--list-header--title"
            >
              MLB Expanded List
            </div>
            <div
              className="iot--list-header--btn-container"
            >
              <button
                className="iot--btn bx--btn bx--btn--sm bx--btn--primary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="bx--assistive-text"
                >
                  Add
                </span>
                <svg
                  aria-hidden="true"
                  aria-label="Add"
                  className="bx--btn__icon"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="iot--list-header--search"
          >
            <div
              aria-labelledby="iot--list-header--search-search"
              className="bx--search bx--search--sm"
              role="search"
            >
              <svg
                aria-hidden={true}
                className="bx--search-magnifier"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                />
              </svg>
              <label
                className="bx--label"
                htmlFor="iot--list-header--search"
                id="iot--list-header--search-search"
              >
                Enter a value
              </label>
              <input
                autoComplete="off"
                className="bx--search-input"
                id="iot--list-header--search"
                onChange={[Function]}
                placeholder="Enter a value"
                role="searchbox"
                type="text"
                value=""
              />
              <button
                aria-label="Clear search input"
                className="bx--search-close bx--search-close--hidden"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          className="iot--list--content__full-height iot--list--content"
        >
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Chicago White Sox"
                  >
                    Chicago White Sox
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="New York Yankees"
                  >
                    New York Yankees
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Houston Astros"
                  >
                    Houston Astros
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Atlanta Braves"
                  >
                    Atlanta Braves
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="New York Mets"
                  >
                    New York Mets
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="iot--list--page"
        >
          <div
            className="iot-simple-pagination-container"
          >
            <span
              className="iot-simple-pagination-page-label"
              maxpage={2}
            >
              Page 1
            </span>
            <div
              className="bx--pagination__button bx--pagination__button--backward iot-addons-simple-pagination-button-disabled"
              role="button"
              tabIndex={-1}
            >
              <svg
                aria-hidden={true}
                className="iot-simple-pagination-caret-disabled"
                description="Prev page"
                dir="ltr"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 24L10 16 20 8z"
                />
              </svg>
            </div>
            <div
              className="bx--pagination__button bx--pagination__button--forward iot-addons-simple-pagination-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                className="iot-simple-pagination-caret"
                description="Next page"
                dir="ltr"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8L22 16 12 24z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HierarchyList With defaultSelectedId 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": 400,
          "width": 400,
        }
      }
    >
      <div
        className="iot--list"
      >
        <div
          className="iot--list-header-container"
        >
          <div
            className="iot--list-header"
          >
            <div
              className="iot--list-header--title"
            >
              MLB Expanded List
            </div>
            <div
              className="iot--list-header--btn-container"
            />
          </div>
          <div
            className="iot--list-header--search"
          >
            <div
              aria-labelledby="iot--list-header--search-search"
              className="bx--search bx--search--sm"
              role="search"
            >
              <svg
                aria-hidden={true}
                className="bx--search-magnifier"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                />
              </svg>
              <label
                className="bx--label"
                htmlFor="iot--list-header--search"
                id="iot--list-header--search-search"
              >
                Enter a value
              </label>
              <input
                autoComplete="off"
                className="bx--search-input"
                id="iot--list-header--search"
                onChange={[Function]}
                placeholder="Enter a value"
                role="searchbox"
                type="text"
                value=""
              />
              <button
                aria-label="Clear search input"
                className="bx--search-close bx--search-close--hidden"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          className="iot--list--content"
        >
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Chicago White Sox"
                  >
                    Chicago White Sox
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="New York Yankees"
                  >
                    New York Yankees
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Houston Astros"
                  >
                    Houston Astros
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Atlanta Braves"
                  >
                    Atlanta Braves
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Expand"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 5L13 10 12.3 10.7 8 6.4 3.7 10.7 3 10z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="New York Mets"
                  >
                    New York Mets
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Jeff McNeil"
                  >
                    Jeff McNeil
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Amed Rosario"
                  >
                    Amed Rosario
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Michael ConfortoMichael ConfortoMichael ConfortoMichael Conforto"
                  >
                    Michael ConfortoMichael ConfortoMichael ConfortoMichael Conforto
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable iot--list-item__selected"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content iot--list-item--content__selected"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Pete Alonso"
                  >
                    Pete Alonso
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Wilson Ramos"
                  >
                    Wilson Ramos
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Robinson Cano"
                  >
                    Robinson Cano
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="JD Davis"
                  >
                    JD Davis
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Brandon Nimmo"
                  >
                    Brandon Nimmo
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item iot--list-item__selectable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="iot--list-item--nesting-offset"
              style={
                Object {
                  "width": "30px",
                }
              }
            >
               
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value"
                    title="Jacob Degrom"
                  >
                    Jacob Degrom
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="iot--list-item"
          >
            <div
              className="iot--list-item--expand-icon"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="Close"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </div>
            <div
              className="iot--list-item--content"
            >
              <div
                className="iot--list-item--content--values"
              >
                <div
                  className="iot--list-item--content--values--main"
                >
                  <div
                    className="iot--list-item--content--values--value iot--list-item--category"
                    title="Washington Nationals"
                  >
                    Washington Nationals
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="iot--list--page"
        >
          <div
            className="iot-simple-pagination-container"
          >
            <span
              className="iot-simple-pagination-page-label"
              maxpage={1}
            >
              Page 1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
